test/invalid/baseline/iterator.txt
Syntax error at line 5, since `interface SessionManager`:
  Session iterator;
                  ^ Invalid operation
